src/main/java/com/example/forsparkers/error/CustomizedResponseEntityExceptionHandler.java
package com.example.forsparkers.error;

import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestController;
import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;

@RestController
@ControllerAdvice
public class CustomizedResponseEntityExceptionHandler extends ResponseEntityExceptionHandler {

    @ExceptionHandler(Exception.class)
    public final ResponseEntity<Error> handleAllExceptions(Exception exception, HttpStatus httpStatus) {
        Error error = new Error(httpStatus.value(), exception.getMessage());
        return new ResponseEntity<>(error, httpStatus);
    }
}
